working on firefox mousewheel and foreignObject issues

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -7,6 +7,6 @@
 	overflow: hidden;
 }
 
-#projects, #projects div, #projects div svg {
+#projects, #projects > div, #projects > div svg {
 	height: 100%;
 }
