--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+svg text {
+	alignment-baseline: middle;
+	dominant-baseline: middle;
+	text-anchor: middle;
+	font-size: 20px;
+}
